--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -36,6 +36,7 @@ all:
             vrfs_rd_rt_override:
             spanning-tree-mode-rapid-pvst:
             node-type-l3-interfaces:
+            ipv4-acls:
         OVERRIDE_UPLINK_TYPE:
           hosts:
             override_uplink_type-d:
