--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -450,16 +450,12 @@ router bgp 65000
    neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.17.0.6 remote-as 65199
    neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1
-   neighbor 172.17.0.9 description cv-pathfinder-edge2B
-   neighbor 172.17.0.9 route-reflector-client
-   neighbor 172.17.0.9 update-source Dps1
-   neighbor 172.17.0.9 route-map RM-WAN-HA-LOCAL-PREF-IN in
-   neighbor 172.17.0.9 send-community
-   neighbor 172.17.0.11 description cv-pathfinder-edge2B
-   neighbor 172.17.0.11 route-reflector-client
-   neighbor 172.17.0.11 update-source Dps1
-   neighbor 172.17.0.11 route-map RM-WAN-HA-LOCAL-PREF-IN in
-   neighbor 172.17.0.11 send-community
+   neighbor 192.168.142.3 remote-as 65000
+   neighbor 192.168.142.3 description cv-pathfinder-edge2B
+   neighbor 192.168.142.3 route-reflector-client
+   neighbor 192.168.142.3 update-source Dps1
+   neighbor 192.168.142.3 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 192.168.142.3 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -468,8 +464,7 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
-      neighbor 172.17.0.9 activate
-      neighbor 172.17.0.11 activate
+      neighbor 192.168.142.3 activate
       neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
