--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3A.cfg
@@ -109,6 +109,8 @@ router path-selection
       ipsec profile DP-PROFILE
       flow assignment lan
       !
+      local interface Ethernet52
+      !
       peer static router-ip 192.168.142.7
          name cv-pathfinder-edge3B
          ipv4 address 10.10.10.1
@@ -353,11 +355,12 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
-   neighbor 10.10.10.1 description cv-pathfinder-edge3B
-   neighbor 10.10.10.1 route-reflector-client
-   neighbor 10.10.10.1 update-source Dps1
-   neighbor 10.10.10.1 route-map RM-WAN-HA-LOCAL-PREF-IN in
-   neighbor 10.10.10.1 send-community
+   neighbor 192.168.142.7 remote-as 65000
+   neighbor 192.168.142.7 description cv-pathfinder-edge3B
+   neighbor 192.168.142.7 route-reflector-client
+   neighbor 192.168.142.7 update-source Dps1
+   neighbor 192.168.142.7 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 192.168.142.7 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -366,7 +369,7 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
-      neighbor 10.10.10.1 activate
+      neighbor 192.168.142.7 activate
       neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
