--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -486,11 +486,12 @@ router bgp 65000
    neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.17.0.0 remote-as 65199
    neighbor 172.17.0.0 description site-ha-enabled-leaf1_Ethernet1
-   neighbor 172.17.0.3 description cv-pathfinder-transit1B
-   neighbor 172.17.0.3 route-reflector-client
-   neighbor 172.17.0.3 update-source Dps1
-   neighbor 172.17.0.3 route-map RM-WAN-HA-LOCAL-PREF-IN in
-   neighbor 172.17.0.3 send-community
+   neighbor 192.168.143.2 remote-as 65000
+   neighbor 192.168.143.2 description cv-pathfinder-transit1B
+   neighbor 192.168.143.2 route-reflector-client
+   neighbor 192.168.143.2 update-source Dps1
+   neighbor 192.168.143.2 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 192.168.143.2 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -499,7 +500,7 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
-      neighbor 172.17.0.3 activate
+      neighbor 192.168.143.2 activate
       neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
