--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -483,14 +483,15 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
-   neighbor 172.17.0.1 description cv-pathfinder-transit1A
-   neighbor 172.17.0.1 route-reflector-client
-   neighbor 172.17.0.1 update-source Dps1
-   neighbor 172.17.0.1 route-map RM-WAN-HA-LOCAL-PREF-IN in
-   neighbor 172.17.0.1 send-community
    neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.17.0.2 remote-as 65199
    neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2
+   neighbor 192.168.143.1 remote-as 65000
+   neighbor 192.168.143.1 description cv-pathfinder-transit1A
+   neighbor 192.168.143.1 route-reflector-client
+   neighbor 192.168.143.1 update-source Dps1
+   neighbor 192.168.143.1 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 192.168.143.1 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -499,7 +500,7 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
-      neighbor 172.17.0.1 activate
+      neighbor 192.168.143.1 activate
       neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
