--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
@@ -52,9 +52,10 @@ router_bgp:
     peer_group: WAN-OVERLAY-PEERS
     peer: cv-pathfinder-pathfinder
     description: cv-pathfinder-pathfinder
-  - ip_address: 172.17.0.3
+  - ip_address: 192.168.143.2
     peer: cv-pathfinder-transit1B
     description: cv-pathfinder-transit1B
+    remote_as: '65000'
     update_source: Dps1
     route_reflector_client: true
     send_community: all
@@ -157,7 +158,7 @@ router_bgp:
       next_hop_self_received_evpn_routes:
         enable: true
     neighbors:
-    - ip_address: 172.17.0.3
+    - ip_address: 192.168.143.2
       activate: true
   address_family_ipv4_sr_te:
     peer_groups:
