--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/config-comment.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/config-comment.cfg
@@ -1,6 +1,7 @@
 !RANCID-CONTENT-TYPE: arista
 !
-!CONFIG-COMMENT: This is a test comment to test config_comment.
+!This is a test comment to test config_comment.
+!This is multiline comment.
 !
 transceiver qsfp default-mode 4x10G
 !
