Feat(eos_cli_config_gen): Add router service-insertion subcommands for Internet Exit

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
@@ -5,6 +5,12 @@ transceiver qsfp default-mode 4x10G
 hostname router-service-insertion
 !
 router service-insertion
+   connection connection1
+      interface ethernet2 next-hop 10.10.10.10
+      monitor connectivity host host1
+   connection connection2
+      interface tunnel2 primary
+      monitor connectivity host host2
 !
 no enable password
 no aaa root
