Enhacing interface key

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
@@ -11,6 +11,9 @@ router service-insertion
    connection connection2
       interface tunnel2 primary
       monitor connectivity host host2
+   connection connection3
+      interface tunnel3 secondary
+      monitor connectivity host host3
 !
 no enable password
 no aaa root
