--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -12337,13 +12337,13 @@ keys:
               - iif
   router_internet_exit:
     type: dict
-    description: Internet-exit feature provides internet bound service offered in
-      an AVT to the traffic going outside the enterprise towards the internet.
+    description: Internet-exit feature to configure internet bound service for virtual
+      topologies.
     keys:
       policies:
         type: list
         description: Internet-exit policy represent a policy which can be attached
-          to an AVT profile that needs to be applied to the traffic matching the AVT.
+          to a virtual topology profile.
         primary_key: name
         items:
           type: dict
@@ -12355,20 +12355,11 @@ keys:
               description: The exit groups that are configured under a policy are
                 strictly ordered, meaning an exit group appearing first has more priority
                 than the exit group that follows it.
-              primary_key: name
               items:
                 type: dict
                 keys:
                   name:
                     type: str
-                  after:
-                    type: str
-                    description: Insert the previous exit group AFTER the following
-                      exit group.
-                  before:
-                    type: str
-                    description: Insert the previous exit group BEFORE the following
-                      exit group.
       exit_groups:
         type: list
         description: 'Exit groups represent a group of exit options (connections).
@@ -12385,17 +12376,17 @@ keys:
               type: bool
               description: Fib default exit indicates that the flows that select this
                 exit will follow the default route available in the VRF of the flow.
-            locals:
+            local_connections:
               type: list
-              description: 'Local connection refers to a connection configured under
-                the service-insertion CLI mode.
+              description: 'Local connections refer to connections configured under
+                the `router_service_insertion`.
 
                 The service-insertion module reports the health of the connection
                 and the exit will qualify for use only when it is healthy.'
               items:
                 type: dict
                 keys:
-                  connection:
+                  name:
                     type: str
   router_isis:
     type: dict
