Update documentation on MLAG supporting IPv4 and IPv6

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6320,13 +6320,13 @@ keys:
         type: str
       peer_address:
         type: str
-        description: IPv4 Address
+        description: IPv4 or IPv6 Address
       peer_address_heartbeat:
         type: dict
         keys:
           peer_ip:
             type: str
-            description: IPv4 Address
+            description: IPv4 or IPv6 Address
           vrf:
             description: VRF Name
             type: str
