Adding alternate apply option

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x.cfg
@@ -20,8 +20,8 @@ dot1x
    mac based authentication hold period 300 seconds
    radius av-pair service-type
    radius av-pair framed-mtu 1500
-aaa unresponsive phone action traffic allow
-aaa unresponsive action apply cached-results timeout 10 hours
+aaa unresponsive phone action apply cached-results else traffic allow
+aaa unresponsive action traffic allow vlan 10
 aaa unresponsive eap response success
 aaa unresponsive recovery action reauthenticate
 !
