--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -1523,9 +1523,11 @@ keys:
             - str
       aaa:
         type: dict
+        description: Configure AAA parameters.
         keys:
           unresponsive:
             type: dict
+            description: Configure AAA timeout options.
             keys:
               eap_response:
                 type: str
@@ -1534,9 +1536,11 @@ keys:
                 - disabled
               action:
                 type: dict
+                description: Set action for supplicant when AAA times out.
                 keys:
                   apply_cached_results:
                     type: bool
+                    description: Use results from a previous AAA response.
                   cached_results_timeout:
                     type: dict
                     keys:
@@ -1553,17 +1557,24 @@ keys:
                         - hours
                         - minutes
                         - seconds
+                  apply_alternate:
+                    type: bool
+                    description: Apply alternate action if primary action fails.
                   traffic_allow:
                     type: bool
+                    description: Set action for supplicant traffic when AAA times
+                      out.
                   traffic_allow_vlan:
                     type: int
                     convert_types:
                     - str
               phone_action:
                 type: dict
+                description: Set action for supplicant when AAA times out.
                 keys:
                   apply_cached_results:
                     type: bool
+                    description: Use results from a previous AAA response.
                   cached_results_timeout:
                     type: dict
                     keys:
@@ -1580,7 +1591,12 @@ keys:
                         - hours
                         - minutes
                         - seconds
+                  apply_alternate:
+                    type: bool
+                    description: Apply alternate action if primary action fails.
                   traffic_allow:
+                    description: Set action for supplicant traffic when AAA times
+                      out.
                     type: bool
               recovery_action_reauthenticate:
                 type: bool
