--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
@@ -10,9 +10,11 @@ router service-insertion
       monitor connectivity host host1
    connection connection2
       interface tunnel2 primary
+      interface tunnel3 secondary
       monitor connectivity host host2
    connection connection3
-      interface tunnel3 secondary
+      interface tunnel4 primary
+      interface tunnel5 secondary
       monitor connectivity host host3
 !
 no enable password
