Updating for vrf stages

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -33,11 +33,15 @@ event-handler trigger-on-maintenance
    action bash echo "on-maintenance"
 !
 event-handler trigger-on-maintenance1
-   trigger on-maintenance enter bgp 10.0.0.2 after stage linkdown
+   trigger on-maintenance enter bgp 10.0.0.2 vrf vrf1 after stage linkdown
    action bash echo "on-maintenance"
 !
 event-handler trigger-on-maintenance2
    trigger on-maintenance enter unit unit1 before stage bgp
+   action bash echo "on-maintenance"
+!
+event-handler trigger-on-maintenance3
+   trigger on-maintenance enter bgp 10.0.0.2 vrf vrf1 all
    action bash echo "on-maintenance"
 !
 end
