--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
@@ -43,3 +43,13 @@ event_handlers:
       after_before_stage: bgp
     action_type: bash
     action: echo "on-maintenance"
+  - name: trigger-on-maintenance3
+    trigger: on-maintenance
+    trigger_on_maintenance:
+      operation: enter
+      bgp:
+        neighbor_address_ipv4: 10.0.0.2
+      vrf: vrf1
+      stage: all
+    action_type: bash
+    action: echo "on-maintenance"
