Updating key names

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -28,12 +28,8 @@ event-handler trigger-on-boot
    trigger on-boot
    action bash echo "on-boot"
 !
-event-handler trigger-on-maintenance
-   trigger on-maintenance enter interface Ethernet4 all
-   action bash echo "on-maintenance"
-!
 event-handler trigger-on-maintenance1
-   trigger on-maintenance enter bgp 10.0.0.2 vrf vrf1 after stage linkdown
+   trigger on-maintenance enter interface Management3 after stage linkdown
    action bash echo "on-maintenance"
 !
 event-handler trigger-on-maintenance2
