--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
@@ -15,23 +15,13 @@ event_handlers:
     trigger: on-boot
     action_type: bash
     action: echo "on-boot"
-  - name: trigger-on-maintenance
-    trigger: on-maintenance
-    trigger_on_maintenance:
-      operation: enter
-      interface: Ethernet4
-      stage: all
-    action_type: bash
-    action: echo "on-maintenance"
   - name: trigger-on-maintenance1
     trigger: on-maintenance
     trigger_on_maintenance:
       operation: enter
-      bgp:
-        neighbor_address_ipv4: 10.0.0.2
       interface: Management3
-      stage: after
-      after_before_stage: linkdown
+      action: after
+      stage: linkdown
     action_type: bash
     action: echo "on-maintenance"
   - name: trigger-on-maintenance2
@@ -39,8 +29,8 @@ event_handlers:
     trigger_on_maintenance:
       operation: enter
       unit: unit1
-      stage: before
-      after_before_stage: bgp
+      action: before
+      stage: bgp
     action_type: bash
     action: echo "on-maintenance"
   - name: trigger-on-maintenance3
@@ -50,6 +40,6 @@ event_handlers:
       bgp:
         neighbor_address_ipv4: 10.0.0.2
       vrf: vrf1
-      stage: all
+      action: all
     action_type: bash
     action: echo "on-maintenance"
