Addressing review comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ipv4-acls.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ipv4-acls.cfg
@@ -67,10 +67,10 @@ ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Ethernet2
    permit ip host 172.17.17.17 any
 !
 ip access-list TEST-IPV4-ACL-WITH-NO-FIELDS-IN
-   permit ip host host 172.18.18.18 any
+   permit ip host 172.18.18.18 any
 !
 ip access-list TEST-IPV4-ACL-WITH-NO-FIELDS-OUT
-   permit ip host host 172.18.18.18 any
+   permit ip host 172.18.18.18 any
 !
 ip routing
 no ip routing vrf MGMT
