--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ipv4-acls.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ipv4-acls.yml
@@ -142,13 +142,13 @@ ip_access_lists:
   entries:
   - action: permit
     protocol: ip
-    source: host 172.18.18.18
+    source: 172.18.18.18
     destination: any
 - name: TEST-IPV4-ACL-WITH-NO-FIELDS-OUT
   entries:
   - action: permit
     protocol: ip
-    source: host 172.18.18.18
+    source: 172.18.18.18
     destination: any
 router_bfd:
   multihop:
