--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3594,7 +3594,7 @@ keys:
                 type: str
                 description: 'Comment up to 100 characters.
 
-                  If remark is defined, other keys in acl entry will be ignored.'
+                  If remark is defined, other keys in the ACL entry will be ignored.'
               action:
                 type: str
                 valid_values:
