--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/ipv4_acls.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/ipv4_acls.schema.yml
@@ -10,10 +10,10 @@ keys:
     type: list
     primary_key: name
     description: |-
-      IPv4 Extended Access-lists supporting substition on certain fields.
-      The substition is useful when assigning the same access-list on multiple interfaces,
+      IPv4 Extended Access-lists supporting substitution on certain fields.
+      The substitution is useful when assigning the same access-list on multiple interfaces,
       but where certain fields require unique values like the "interface_ip" or "peer_ip".
-      When using substition, the interface name will be appended to the ACL name.
+      When using substitution, the interface name will be appended to the ACL name.
     items:
       $ref: "eos_cli_config_gen#/keys/ip_access_lists/items"
       type: dict
@@ -22,7 +22,7 @@ keys:
           type: str
           description: |-
             Access-list name.
-            When using substition for any fields, the interface name will be appended to the ACL name.
+            When using substitution for any fields, the interface name will be appended to the ACL name.
         entries:
           type: list
           required: true
@@ -32,14 +32,14 @@ keys:
               source:
                 type: str
                 description: |-
-                  This field supports substition of the fields "interface_ip" and "peer_ip".
+                  This field supports substitution of the fields "interface_ip" and "peer_ip".
                   Alternatively it can be set with a static value of "any", "<ip>/<mask>" or "<ip>".
                   "<ip>" without a mask means host.
                   Required except for remarks.
               destination:
                 type: str
                 description: |-
-                  This field supports substition of the fields "interface_ip" and "peer_ip".
+                  This field supports substitution of the fields "interface_ip" and "peer_ip".
                   Alternatively it can be set with a static value of "any", "<ip>/<mask>" or "<ip>".
                   "<ip>" without a mask means host.
                   Required except for remarks.
